Acode/AcodeParser.java
// Generated from Acode.g4 by ANTLR 4.4
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AcodeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__14=1, T__13=2, T__12=3, T__11=4, T__10=5, T__9=6, T__8=7, T__7=8, T__6=9, 
		T__5=10, T__4=11, T__3=12, T__2=13, T__1=14, T__0=15, AND=16, OR=17, NOT=18, 
		NEWLINE=19, ASSIGN=20, BLOCK_START=21, BLOCK_END=22, IF=23, ELSE=24, WHILE=25, 
		FOR=26, PAREN_OPEN=27, PAREN_CLOSE=28, BOOL=29, STRING=30, INT=31, DOUBLE=32, 
		STR=33, CHAR=34, NUMBER=35, DIGIT=36, WHITESPACE=37, ADD=38, SUB=39, MUL=40, 
		DIV=41, MOD=42, EXP=43, ADD_A=44, SUB_A=45, MUL_A=46, DIV_A=47, MOD_A=48, 
		EXP_A=49, EQ=50, NE=51, LE=52, GE=53, GT=54, LT=55;
	public static final String[] tokenNames = {
		"<INVALID>", "'def'", "'extern'", "'char'", "'elseif'", "'ret'", "'void'", 
		"'['", "';'", "']'", "'bool'", "'break'", "'double'", "'int'", "'str'", 
		"','", "AND", "OR", "'not'", "'\n'", "':='", "'{'", "'}'", "'if'", "'else'", 
		"'while'", "'for'", "'('", "')'", "BOOL", "STRING", "INT", "DOUBLE", "STR", 
		"CHAR", "NUMBER", "DIGIT", "WHITESPACE", "'+'", "'-'", "'*'", "'/'", "'%'", 
		"'^'", "'+='", "'-='", "'*='", "'/='", "'%='", "'^='", "'=='", "'!='", 
		"'<='", "'>='", "'>'", "'<'"
	};
	public static final int
		RULE_init = 0, RULE_statements = 1, RULE_statement = 2, RULE_block = 3, 
		RULE_assign_var = 4, RULE_own_assign = 5, RULE_args = 6, RULE_lvalue = 7, 
		RULE_name = 8, RULE_type = 9, RULE_param_call = 10, RULE_expression = 11;
	public static final String[] ruleNames = {
		"init", "statements", "statement", "block", "assign_var", "own_assign", 
		"args", "lvalue", "name", "type", "param_call", "expression"
	};

	@Override
	public String getGrammarFileName() { return "Acode.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AcodeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class InitContext extends ParserRuleContext {
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).enterInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).exitInit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AcodeVisitor ) return ((AcodeVisitor<? extends T>)visitor).visitInit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_init);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(24); statements();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(AcodeParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(AcodeParser.NEWLINE, i);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).exitStatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AcodeVisitor ) return ((AcodeVisitor<? extends T>)visitor).visitStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26); statement();
			setState(31);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(27); match(NEWLINE);
				setState(28); statement();
				}
				}
				setState(33);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class RetContext extends StatementContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public RetContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).enterRet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).exitRet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AcodeVisitor ) return ((AcodeVisitor<? extends T>)visitor).visitRet(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ForContext extends StatementContext {
		public Token op;
		public TerminalNode GE() { return getToken(AcodeParser.GE, 0); }
		public TerminalNode LT() { return getToken(AcodeParser.LT, 0); }
		public TerminalNode FOR() { return getToken(AcodeParser.FOR, 0); }
		public TerminalNode GT() { return getToken(AcodeParser.GT, 0); }
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode LE() { return getToken(AcodeParser.LE, 0); }
		public TerminalNode PAREN_CLOSE() { return getToken(AcodeParser.PAREN_CLOSE, 0); }
		public Own_assignContext own_assign() {
			return getRuleContext(Own_assignContext.class,0);
		}
		public TerminalNode EQ() { return getToken(AcodeParser.EQ, 0); }
		public TerminalNode NE() { return getToken(AcodeParser.NE, 0); }
		public TerminalNode PAREN_OPEN() { return getToken(AcodeParser.PAREN_OPEN, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public Assign_varContext assign_var() {
			return getRuleContext(Assign_varContext.class,0);
		}
		public ForContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).enterFor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).exitFor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AcodeVisitor ) return ((AcodeVisitor<? extends T>)visitor).visitFor(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BreakContext extends StatementContext {
		public BreakContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).enterBreak(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).exitBreak(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AcodeVisitor ) return ((AcodeVisitor<? extends T>)visitor).visitBreak(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FunctionDefContext extends StatementContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public FunctionDefContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).enterFunctionDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).exitFunctionDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AcodeVisitor ) return ((AcodeVisitor<? extends T>)visitor).visitFunctionDef(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EmpContext extends StatementContext {
		public EmpContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).enterEmp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).exitEmp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AcodeVisitor ) return ((AcodeVisitor<? extends T>)visitor).visitEmp(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WhileContext extends StatementContext {
		public TerminalNode PAREN_CLOSE() { return getToken(AcodeParser.PAREN_CLOSE, 0); }
		public TerminalNode WHILE() { return getToken(AcodeParser.WHILE, 0); }
		public TerminalNode PAREN_OPEN() { return getToken(AcodeParser.PAREN_OPEN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public WhileContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).enterWhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).exitWhile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AcodeVisitor ) return ((AcodeVisitor<? extends T>)visitor).visitWhile(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Block_stContext extends StatementContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public Block_stContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).enterBlock_st(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).exitBlock_st(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AcodeVisitor ) return ((AcodeVisitor<? extends T>)visitor).visitBlock_st(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExternContext extends StatementContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public ExternContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).enterExtern(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).exitExtern(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AcodeVisitor ) return ((AcodeVisitor<? extends T>)visitor).visitExtern(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PrintContext extends StatementContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public PrintContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).enterPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).exitPrint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AcodeVisitor ) return ((AcodeVisitor<? extends T>)visitor).visitPrint(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssVarContext extends StatementContext {
		public Assign_varContext assign_var() {
			return getRuleContext(Assign_varContext.class,0);
		}
		public AssVarContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).enterAssVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).exitAssVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AcodeVisitor ) return ((AcodeVisitor<? extends T>)visitor).visitAssVar(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignContext extends StatementContext {
		public TerminalNode ASSIGN() { return getToken(AcodeParser.ASSIGN, 0); }
		public LvalueContext lvalue() {
			return getRuleContext(LvalueContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).enterAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).exitAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AcodeVisitor ) return ((AcodeVisitor<? extends T>)visitor).visitAssign(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfContext extends StatementContext {
		public Token op;
		public TerminalNode IF() { return getToken(AcodeParser.IF, 0); }
		public TerminalNode GE() { return getToken(AcodeParser.GE, 0); }
		public TerminalNode LT() { return getToken(AcodeParser.LT, 0); }
		public TerminalNode GT() { return getToken(AcodeParser.GT, 0); }
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode LE() { return getToken(AcodeParser.LE, 0); }
		public TerminalNode PAREN_CLOSE() { return getToken(AcodeParser.PAREN_CLOSE, 0); }
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public TerminalNode EQ() { return getToken(AcodeParser.EQ, 0); }
		public TerminalNode NE() { return getToken(AcodeParser.NE, 0); }
		public TerminalNode PAREN_OPEN() { return getToken(AcodeParser.PAREN_OPEN, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public IfContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).enterIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).exitIf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AcodeVisitor ) return ((AcodeVisitor<? extends T>)visitor).visitIf(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Own_assContext extends StatementContext {
		public Own_assignContext own_assign() {
			return getRuleContext(Own_assignContext.class,0);
		}
		public Own_assContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).enterOwn_ass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).exitOwn_ass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AcodeVisitor ) return ((AcodeVisitor<? extends T>)visitor).visitOwn_ass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		int _la;
		try {
			setState(105);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new AssVarContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(34); assign_var();
				}
				break;
			case 2:
				_localctx = new Own_assContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(35); own_assign();
				}
				break;
			case 3:
				_localctx = new AssignContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(36); lvalue();
				setState(37); match(ASSIGN);
				setState(38); expression(0);
				setState(39); match(T__7);
				}
				break;
			case 4:
				_localctx = new PrintContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(41); expression(0);
				}
				break;
			case 5:
				_localctx = new RetContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(42); match(T__10);
				setState(44);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NOT) | (1L << PAREN_OPEN) | (1L << BOOL) | (1L << STRING) | (1L << INT) | (1L << ADD) | (1L << SUB))) != 0)) {
					{
					setState(43); expression(0);
					}
				}

				setState(46); match(T__7);
				}
				break;
			case 6:
				_localctx = new Block_stContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(47); block();
				}
				break;
			case 7:
				_localctx = new IfContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(48); match(IF);
				setState(49); match(PAREN_OPEN);
				setState(50); expression(0);
				setState(51);
				((IfContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EQ) | (1L << NE) | (1L << LE) | (1L << GE) | (1L << GT) | (1L << LT))) != 0)) ) {
					((IfContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				consume();
				setState(52); expression(0);
				setState(53); match(PAREN_CLOSE);
				setState(54); block();
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__11) {
					{
					{
					setState(55); match(T__11);
					setState(56); expression(0);
					setState(57); block();
					}
					}
					setState(63);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(66);
				_la = _input.LA(1);
				if (_la==ELSE) {
					{
					setState(64); match(ELSE);
					setState(65); block();
					}
				}

				}
				break;
			case 8:
				_localctx = new WhileContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(68); match(WHILE);
				setState(69); match(PAREN_OPEN);
				setState(70); expression(0);
				setState(71); match(PAREN_CLOSE);
				setState(72); block();
				}
				break;
			case 9:
				_localctx = new ForContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(74); match(FOR);
				setState(75); match(PAREN_OPEN);
				setState(76); assign_var();
				setState(77); expression(0);
				setState(78);
				((ForContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EQ) | (1L << NE) | (1L << LE) | (1L << GE) | (1L << GT) | (1L << LT))) != 0)) ) {
					((ForContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				consume();
				setState(79); expression(0);
				setState(80); match(T__7);
				setState(81); own_assign();
				setState(82); match(PAREN_CLOSE);
				setState(83); block();
				}
				break;
			case 10:
				_localctx = new FunctionDefContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(85); match(T__14);
				setState(86); type(0);
				setState(87); name();
				setState(88); match(PAREN_OPEN);
				setState(89); args();
				setState(90); match(PAREN_CLOSE);
				setState(91); block();
				}
				break;
			case 11:
				_localctx = new EmpContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				}
				break;
			case 12:
				_localctx = new ExternContext(_localctx);
				enterOuterAlt(_localctx, 12);
				{
				setState(94); match(T__13);
				setState(95); match(T__14);
				setState(96); type(0);
				setState(97); name();
				setState(98); match(PAREN_OPEN);
				setState(99); args();
				setState(100); match(PAREN_CLOSE);
				setState(101); match(T__7);
				}
				break;
			case 13:
				_localctx = new BreakContext(_localctx);
				enterOuterAlt(_localctx, 13);
				{
				setState(103); match(T__4);
				setState(104); match(T__7);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode BLOCK_END() { return getToken(AcodeParser.BLOCK_END, 0); }
		public TerminalNode BLOCK_START() { return getToken(AcodeParser.BLOCK_START, 0); }
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AcodeVisitor ) return ((AcodeVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107); match(BLOCK_START);
			setState(108); statements();
			setState(109); match(BLOCK_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assign_varContext extends ParserRuleContext {
		public TerminalNode ASSIGN() { return getToken(AcodeParser.ASSIGN, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public LvalueContext lvalue() {
			return getRuleContext(LvalueContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Assign_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).enterAssign_var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).exitAssign_var(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AcodeVisitor ) return ((AcodeVisitor<? extends T>)visitor).visitAssign_var(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Assign_varContext assign_var() throws RecognitionException {
		Assign_varContext _localctx = new Assign_varContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assign_var);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111); type(0);
			setState(112); lvalue();
			setState(115);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(113); match(ASSIGN);
				setState(114); expression(0);
				}
			}

			setState(117); match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Own_assignContext extends ParserRuleContext {
		public Token op;
		public TerminalNode MOD_A() { return getToken(AcodeParser.MOD_A, 0); }
		public TerminalNode ADD_A() { return getToken(AcodeParser.ADD_A, 0); }
		public TerminalNode EXP_A() { return getToken(AcodeParser.EXP_A, 0); }
		public TerminalNode DIV_A() { return getToken(AcodeParser.DIV_A, 0); }
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode MUL_A() { return getToken(AcodeParser.MUL_A, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public TerminalNode SUB_A() { return getToken(AcodeParser.SUB_A, 0); }
		public Own_assignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_own_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).enterOwn_assign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AcodeListener ) ((AcodeListener)listener).exitOwn_assign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AcodeVisitor ) return ((AcodeVisitor<? extends T>)visitor).visitOwn_assign(this);
			else return visitor.visitChildren(this);
		}
	}
